fixed the squished button on mobile

--- a/static/css/pretty.css
+++ b/static/css/pretty.css
@@ -747,6 +747,7 @@ i:hover{
 	#burger{
 		font-size: 48px;
 		margin: 0 0 0 1%;
+		width: 10%;
 	}
 
 	#firstName{
